# Nikola

./: '  .gitignore  .gitmodules  ARCH.md  CMakeLists.txt  LICENSE  README.md  TODO.md  \  nikol_core.h  nikol_core.hpp
NBR/: CMakeLists.txt  README.md  list_guide.nbrlist
NBR/libs/stb/: stb_vorbis.cpp
NBR/src/: DEP_animation_loader.cpp  animation_loader.cpp  animation_loader.cpp~  audio_loader.cpp  font_loader.cpp  gltf_animation_loader.cpp  gltf_loader.cpp  image_loader.cpp  main.cpp  model_loader.cpp  nbr.h  nbr.hpp  nbr_args_lexer.cpp  nbr_args_parser.cpp  nbr_list.cpp  nbr_list_lexer.cpp  nbr_list_parser.cpp  nbr_pch.h  shader_loader.cpp  skeleton_loader.cpp  stb_image_loader.cpp
build-debug/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
build-debug/libs/glfw/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
build-debug/libs/glfw/docs/: Makefile  (+1 more)
build-debug/testbed/: Makefile  cmake_install.cmake
build-debug/testbed/res/: opengl.nbr
build-release/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
build-release/libs/glfw/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
build-release/testbed/: Makefile  NikolaTestbed  cmake_install.cmake
cmake/: utils.cmake
examples/: CMakeLists.txt
examples/.cache/clangd/index/: gl_example.cpp.1FAED78D166844A3.idx  main.cpp.AE0DD7D3462AA018.idx
examples/basic_example/: main.cpp
examples/src/: basic_example.cpp  dx11_example.cpp  gl_example.cpp  main.cpp
libs/glad/: glad.c  glad.h
libs/imgui/backends/: imgui_impl_glfw.cpp
libs/ishtar/: ishtar.cpp  ishtar.h
libs/sokol/: sokol_app.cpp  sokol_gfx.cpp  sokol_glue.cpp
nikol/include/nikol/: nikol_core.hpp  nikol_engine.hpp
nikola/: CMakeLists.txt
nikola/include/nikola/: nikola.h  nikola_app.h  nikola_audio.h  nikola_base.h  nikola_containers.h  nikola_core.hpp  nikola_engine.hpp  nikola_engine.hpp~  nikola_entity.h  nikola_event.h  nikola_file.h  nikola_gfx.h  nikola_input.h  nikola_math.h  nikola_pch.h  nikola_physics.h  nikola_render.h  nikola_render.h~  nikola_resources.h  nikola_resources.h~  nikola_scene.h  nikola_thread.h  nikola_timer.h  nikola_timer.h~  nikola_timer.y~  nikola_timer.z~  nikola_ui.h  nikola_ui.hpp  nikola_window.h
nikola/src/: engine.cpp
nikola/src/audio/: audio_openal.cpp
nikola/src/base/: event.cpp  input.cpp  logger.cpp  nikola.cpp  nikola_memory.cpp  window.cpp
nikola/src/core/base/: event.cpp  input.cpp  logger.cpp  nikola.cpp  nikola_clock.cpp  nikola_memory.cpp  window.cpp
nikola/src/core/gfx/: dx11_backend.cpp  gl_backend.cpp
nikola/src/engine/: engine.cpp  filesystem.cpp
nikola/src/engine/filesystem/: file.cpp  filepath.cpp  filesystem.cpp  filewatcher.cpp
nikola/src/engine/math/: math_common.cpp  matrix_types.cpp  quaternion.cpp  random.cpp  transform.cpp  vector_types.cpp  vertex.cpp
nikola/src/engine/renderer/: batch_renderer.cpp  camera.cpp  renderer.cpp
nikola/src/engine/resources/: material.cpp  nbr_file.cpp  nbr_importer.cpp  resource_manager.cpp  shader_context.cpp
nikola/src/engine/resources/loaders/: cubemap_loader.cpp  cubemap_loader.hpp  material_loader.cpp  material_loader.hpp  mesh_loader.cpp  mesh_loader.h  mesh_loader.hpp  skybox_loader.cpp  skybox_loader.hpp  texture_loader.cpp  texture_loader.hpp
nikola/src/entity/: entity.cpp
nikola/src/filesystem/: file.cpp  filepath.cpp  filesystem.cpp  filewatcher.cpp
nikola/src/gfx/: gl_backend.cpp  sokol_backend.cpp
nikola/src/math/: math_common.cpp  matrix_types.cpp  point.cpp  quaternion.cpp  random.cpp  transform.cpp  vector_types.cpp  vertex.cpp
nikola/src/physics/: collider.cpp  physics.cpp  physics_body.cpp  physics_world.cpp  ray.cpp
nikola/src/renderer/: animation.cpp  animation.cpp~  animator.cpp  batch_renderer.cpp  camera.cpp  compute_shaders.h  light_shaders.h  particles.cpp  render_shaders.h  renderer.cpp  shader_context.cpp  ui_renderer.cpp
nikola/src/renderer/render_passes/: billboard_pass.cpp  debug_pass.cpp  hdr_pass.cpp  light_pass.cpp  particle_pass.cpp  render_passes.h  shadow_pass.cpp
nikola/src/renderer/shaders/: batch.glsl.h  billboard.glsl.h  bling_phong.glsl.h  compute.glsl.h  debug.glsl.h  default.glsl.h  hdr.glsl.h  particle.glsl.h  pbr_shading.glsl.h  screen_space.glsl.h  shadow.glsl.h  skybox.glsl.h  ssao.glsl.h  ui_shaders.h
nikola/src/resources/: geometry_loader.cpp  material.cpp  nbr.cpp  nbr_file.cpp  nbr_importer.cpp  resource_manager.cpp  shader_context.cpp
nikola/src/resources/loaders/: geomatry_loader.cpp  geomatry_loader.h  geometry_loader.cpp  geometry_loader.h  mesh_loader.cpp  skybox_loader.cpp  skybox_loader.hpp
nikola/src/threads/: job_manager.cpp  thread_pool.cpp
nikola/src/time/: timer_utils.cpp
nikola/src/ui/: gui.cpp  rmlui_backend.cpp  ui_anchor.cpp  ui_button.cpp  ui_checkbox.cpp  ui_context.cpp  ui_document.cpp  ui_image.cpp  ui_layout.cpp  ui_menu.cpp  ui_slider.cpp  ui_text.cpp
scripts/: build-nikola.bat  build-nikola.ps1  build-nikola.sh  dx11.nbrtexture  logo.nbrtexture  opengl.nbrtexture  reload-resources.ps1  reload-resources.sh  reset-assets.bat  run-nbr.sh  run-testbed.bat  run-testbed.ps1  run-testbed.sh
src/: main.cpp
src/core/base/: event.cpp  input.cpp  logger.cpp  memory.cpp  nikol.cpp  nikol_clock.cpp  window.cpp
src/core/gfx/: dx11_backend.cpp  gl_backend.cpp
src/core/math/: nikol_random.cpp
testbed/: CMakeLists.txt  opengl.nbr
testbed/animation_testbed/: app.cpp  app.cpp~  main.cpp
testbed/assets/: 3d_model.nbr
testbed/audio_testbed/: app.cpp  main.cpp
testbed/compute_testbed/: main.cpp
testbed/core_testbed/: default_shader.h  main.cpp
testbed/engine_testbed/: app.cpp  app.hpp  main.cpp  shaders.hpp
testbed/font_testbed/: app.cpp  main.cpp
testbed/model_viewer/: app.cpp  main.cpp
testbed/particles_testbed/: app.cpp  main.cpp
testbed/physics_testbed/: app.cpp  main.cpp
testbed/res/: opengl.nbr
testbed/scene_example/: app.cpp  main.cpp
testbed/scene_example/scenes/: game_scene.cpp  game_scene.h  scene_manager.cpp  scene_manager.h
testbed/ui_testbed/: app.cpp  main.cpp
(+28 files in other folders)
